(fix): prevent output from overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,8 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+pre {
+  word-break: break-all;
+  white-space: pre-line;
+}
